fixed overflow

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -53,7 +53,7 @@
   border: 0;
 }
 
-.columns.icon-steps.block > div:last-child {
+.columns.icon-steps.block > div:last-of-type {
   background-color: white;
   box-shadow: unset;
   border-radius: unset;
@@ -63,14 +63,14 @@
   text-align: center;
 }
 
-.columns.icon-steps.block > div:last-child p {
+.columns.icon-steps.block > div:last-of-type p {
   margin: 0 auto;
   max-height: 158px;
   max-width: 158px;
 
 }
 
-.columns.icon-steps.block > div:last-child h3 {
+.columns.icon-steps.block > div:last-of-type h3 {
   margin-top: 0;
 }
 
@@ -119,6 +119,10 @@
     order: unset;
   }
 
+  .columns.icon-steps.block > div {
+    min-width: unset;
+  }
+
   .columns.icon-steps.block > div:last-child {
     align-items: center;
     gap: 24px;
@@ -136,8 +140,10 @@
 }
 
 @media (min-width: 1200px){
-  /* .columns.icon-steps.block > div > div { */
-  /* } */
+  .columns.icon-steps.block > div  {
+    padding: 20px;
+    min-width: unset;
+  }
 
   .columns.icon-steps.block > div:last-of-type > div {
     position: relative;
@@ -151,7 +157,7 @@
   }
 
   main {
-    width: 1280px;
+    width: 1200px;
     margin: 0 auto;
   }
 }
